--- a/Semana4/Dia2/01-grid.css
+++ b/Semana4/Dia2/01-grid.css
@@ -16,11 +16,30 @@
   /* grid-template-columns: repeat(3, 1fr); */
   /* minmax(tamaño_minimo, tamaño_máximo) */
   grid-template-columns:repeat(3, minmax(180px, 250px));
-  grid-template-rows: 120px 180px 240px;
+  /* grid-template-rows: 120px 180px 240px; */
+  grid-template-rows:[inicio] 120px [medio1] 180px [medio2] 240px [final];
   gap: 10px;
 }
 
 .item{
   border:2px solid lightseagreen;
-
+  display:grid;
+  justify-content: center;
+  align-items: center;
 }
+
+.item:nth-of-type(1){
+  border:3px solid blueviolet;
+  /* grid-column*row: lineaInicio, lineaFinal */
+  /* grid-column:1 / 3;
+  grid-row: 2 / 4; */
+  
+  /* grid-column:span 2;
+  grid-row:span 3; */
+
+  grid-row: inicio / medio2;
+}
+
+/* .item:nth-of-type(5){
+  grid-column:span 2;
+} */
