--- a/Semana4/Dia2/03-galeria.css
+++ b/Semana4/Dia2/03-galeria.css
@@ -10,7 +10,7 @@ html,body{
 }
 
 .contenedor{
-  border:2px solid lightgrey;
+  /* border:2px solid lightgrey; */
   min-width:700px;
   max-width:1000px;
   min-height:900px;
@@ -24,5 +24,101 @@ html,body{
 }
 
 .caja{
-  border:2px solid skyblue;
+  /* border:2px solid skyblue; */
+  background:#eeeeee;
+  font-size:48px;
+  color:white;
+  background-position: center;
+  background-size:cover;
+
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+  /* animación */
+  animation-name: mianimacion;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: backwards;
+  transition: all 250ms;
+}
+
+.caja:hover{
+  box-shadow:5px 5px 5px black;
+  transform: translate(0, 5px) scale(1.01);
+  /* background-size:200%; */
+}
+
+.caja:nth-of-type(1){
+  grid-row: 1 / 3;
+  grid-column: 1 / 3;
+  animation-delay: 50ms;
+  background-image: url('./img/tile1.jpg');
+}
+
+.caja:nth-of-type(2){
+  grid-row:1 / 2;
+  grid-column:3 / 5;
+  animation-delay: 120ms;
+  background-image:url('./img/tile10.jpg');
+}
+
+.caja:nth-of-type(3){
+  grid-row:2 / 3;
+  grid-column: 3 / 4;
+  animation-delay: 160ms;
+  background-image:url('./img/tile2.jpg')
+}
+
+.caja:nth-of-type(4){
+  grid-row: 2 / 4;
+  grid-column: 4 / 5;
+  animation-delay: 100ms;
+  background-image:url('./img/tile3.jpg');
+}
+
+.caja:nth-of-type(5){
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+  animation-delay: 200ms;
+  background-image:url('./img/tile7.jpg');
+}
+
+.caja:nth-of-type(6){
+  grid-row:3 / 5;
+  grid-column: 3 / 4;
+  animation-delay: 300ms;
+  background-image:url('./img/tile13.jpg');
+}
+
+.caja:nth-of-type(7){
+  grid-row:4 / 5;
+  grid-column: 1 / 2;
+  animation-delay: 380ms;
+  background-image: url('./img/tile16.jpg');
+}
+
+.caja:nth-of-type(8){
+  grid-row:4 / 5;
+  grid-column:2 / 3;
+  animation-delay: 500ms;
+  background-image:url('./img/tile15.jpg');
+}
+
+.caja:nth-of-type(9){
+  grid-row:4 / 5;
+  grid-column: 4 / 5;
+  animation-delay: 150ms;
+  background-image:url('./img/tile5.jpg');
+}
+
+@keyframes mianimacion {
+  0%{
+    transform:scale(0);
+  }
+
+  70%{
+    transform:scale(1.05);
+  }
+
+  100%{
+    transform:scale(1);
+  }
 }
