--- a/Semana13/app-angular/src/app/components/tarjeta/tarjeta.component.html
+++ b/Semana13/app-angular/src/app/components/tarjeta/tarjeta.component.html
@@ -1,7 +1,8 @@
 <div class="col-3">
   <div class="card">
     <!-- property binding, ts -> html -->
-    <img class="img-card-top" [src]="src"/>
+    <!-- <img class="img-card-top" [src]="src"/> -->
+    <img class="img-card-top" src="assets/imagen.jpg" /> 
     <div class="card-text">
       <!-- Interpolación -->
       <h4>{{titulo}}</h4>
