--- a/Semana13/app-angular/src/app/components/productos/productos.component.html
+++ b/Semana13/app-angular/src/app/components/productos/productos.component.html
@@ -1,1 +1,10 @@
-<p>productos works!</p>
+<div 
+  *ngFor="let prod of misProductos"
+  class="col-12 col-lg-6 col-xl-3"
+>
+  <app-prod 
+    [prod]="prod" 
+    (productoClick) = "borrarProducto($event)"
+  >
+  </app-prod>
+</div>
