--- a/Semana13/app-angular/src/app/app.component.html
+++ b/Semana13/app-angular/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
   <div class="row">
-    <app-tarjeta></app-tarjeta>
+    <!-- <app-tarjeta></app-tarjeta> -->
+    <app-productos></app-productos>
   </div>
 </div>
-<hr>
-<app-productos></app-productos>
