--- a/Semana13/app-angular/src/app/app.component.html
+++ b/Semana13/app-angular/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <div class="row">
-    <!-- <app-tarjeta></app-tarjeta> -->
-    <app-productos></app-productos>
-  </div>
+  <!-- para que las rutas comiencen a funcionar tenemos que invocar al router-outlet -->
+  <router-outlet></router-outlet>
 </div>
