--- a/Semana13/app-angular/src/app/components/navbar/navbar.component.html
+++ b/Semana13/app-angular/src/app/components/navbar/navbar.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" [routerLink]="['crearproducto']">Crear Producto</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
